--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "component": "^1.1.0",
     "date-fns": "^2.28.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
